--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .header{
+  padding: 40px 0;
   display: flex;
   justify-content: space-between;
 }
@@ -10,8 +11,9 @@
     font-family: roboto;
 }
 .logo{
-  padding: 40px 0;
-  margin-right: 63%;
+   width: 190px;
+  height: 35px;
+  background: url('img/img.svg');
 }
 .wraper{
     width: 80%;
