--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 .logo{
    width: 190px;
   height: 35px;
-  background: url('img/img.svg');
+  background: url('img.svg');
 }
 .wraper{
     width: 80%;
