--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 .header{
+  padding: 40px 0;
   display: flex;
   justify-content: space-between;
 }
-.logo,.menu{
+.menu{
   display: inline-block;
   display: flex;
   }
@@ -10,8 +11,13 @@
     font-family: roboto;
 }
 .logo{
-  padding: 40px 0;
-  margin-right: 63%;
+   width: 190px;
+  height: 35px;
+font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+ padding: 40px 0;
+  line-height: 31px;
+  padding-left: 44px;
+   position: relative;
 }
 .wraper{
     width: 80%;
@@ -28,3 +34,25 @@
 .menu__item:last-child{
   padding-right: 0;
 }
+.logo__circle {
+ width: 28px;
+ height: 28px;
+
+position: absolute;
+ left: 0;
+ top: 0;
+ top: 50%;
+ transform: translateY(-50%);
+}
+
+  .logo__circle_color_dark-blue {
+     background: #0056EC;
+     border-radius: 50%;
+  }
+    .logo__circle_color_blue {
+   left: 8px;
+   top: 56%;
+   background: #C8DBFB;
+   border-radius: 50%;
+   opacity: .7;
+  }
