--- a/styles.css
+++ b/styles.css
@@ -28,28 +28,58 @@ font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
   align-items: center;
 }
 .menu__item{
-  padding: 0 13px;
-}
-
+   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000000;
+  text-decoration: none;
+  position: relative;
+  margin-right: 26px;
+  }
 .menu__item:last-child{
-  padding-right: 0;
+  margin-right: 0;
+}
+.menu__item_active::after {
+ display: block;
+ content: '';
+ width: 68px;
+ height: 3px;
+ background: #0056EC;
+ position: absolute;
+ width: 100%;
+ left: 0;
+}
+.menu__item:after {
+ position: absolute;
+ left: 0;
+ display: block;
+ content: '';
+ width: 0;
+ height: 3px;
+ background: #0056EC;
+ opacity: 0;
+ transition: opacity .5s,
+ width .5s;
+}
+.menu__item:hover {
+ opacity: 0.5;
+}
+.menu__item:hover:after, .menu__item_active:after {
+ opacity: 1;
+ width: 100%;
 }
 .logo__circle {
  width: 28px;
  height: 28px;
-
-position: absolute;
+ position: absolute;
  left: 0;
  top: 0;
  top: 50%;
  transform: translateY(-50%);
 }
-
   .logo__circle_color_dark-blue {
-     background: #0056EC;
-     border-radius: 50%;
+   background: #0056EC;
+   border-radius: 50%;
   }
-    .logo__circle_color_blue {
+  .logo__circle_color_blue {
    left: 8px;
    top: 56%;
    background: #C8DBFB;
