--- a/styles.css
+++ b/styles.css
@@ -2,57 +2,121 @@
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 .menu{
   display: inline-block;
   display: flex;
   }
+.main-section{
+  padding: 0 63% 250px 0;
+  background: url(Frame.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  }
+.main-content__title-text_highlight {
+  background: #ECF3FF;
+  }
 .main-content__title{
-    font-family: roboto;
-}
+  font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
+  width: 567px;
+  height: 255px;
+  left: calc(50% - 567px/2 - 481.5px);
+  margin: 0 0 40px 0;
+  }
+.main-content__saubtitle{
+  font-family: roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  width: 455px;
+  height: 52px;
+  left: calc(50% - 455px/2 - 537.5px);
+  margin: 0 0 41px 0;
+  }
+.main-content__button{
+  display: inline-block;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #fff;
+  background: #0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  }
 .logo{
-   width: 190px;
+  width: 190px;
   height: 35px;
-font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
- padding: 40px 0;
+  font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
+  padding: 20px 0;
   line-height: 31px;
   padding-left: 44px;
-   position: relative;
-}
+  position: relative;
+  }
 .wraper{
-    width: 80%;
+  width: 80%;
   margin: auto;
-}
+  }
 .menu{
   display: flex;
   align-items: center;
-}
-.menu__item{
-  padding: 0 13px;
-}
-
-.menu__item:last-child{
-  padding-right: 0;
-}
-.logo__circle {
- width: 28px;
- height: 28px;
-
-position: absolute;
- left: 0;
- top: 0;
- top: 50%;
- transform: translateY(-50%);
-}
-
-  .logo__circle_color_dark-blue {
-     background: #0056EC;
-     border-radius: 50%;
   }
-    .logo__circle_color_blue {
-   left: 8px;
-   top: 56%;
-   background: #C8DBFB;
-   border-radius: 50%;
-   opacity: .7;
+.menu__item{
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000000;
+  text-decoration: none;
+  position: relative;
+  margin-right: 26px;
+  }
+.menu__item:last-child{
+  margin-right: 0;
+  }
+.menu__item_active::after {
+  display: block;
+  content: '';
+  width: 68px;
+  height: 3px;
+  background: #0056EC;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  }
+.menu__item:after {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity .5s,
+  width .5s;
+  }
+.menu__item:hover {
+  opacity: 0.5;
+  }
+.menu__item:hover:after, .menu__item_active:after {
+  opacity: 1;
+  width: 100%;
+  }
+.logo__circle {
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  }
+.logo__circle_color_dark-blue {
+  background: #0056EC;
+  border-radius: 50%;
+  }
+.logo__circle_color_blue {
+  left: 8px;
+  top: 56%;
+  background: #C8DBFB;
+  border-radius: 50%;
+  opacity: .7;
   }
