--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,31 @@
   border-radius: 50%;
   opacity: .7;
   }
+  @media (max-width: 768px) {
+   .menu {
+   display: none;
+   }
+   .header {
+   margin-bottom: 28px;
+   }
+   .logo__text {
+     display: none;
+   }
+  .main-section {
+  text-align: center;
+   padding: 74% 0 0;
+   background-size: 74%;
+background-position: top center;
+   }
+   .main-content__title {
+   margin-bottom: 44px;
+   font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+   }
+   .main-content__subtitle {
+   margin-bottom: 25px;
+   font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
+   }
+   .main-content__button {
+   font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+   }
+    }
